fix: change z-index for tickets menu

--- a/src/components/Tickets/Tickets.css
+++ b/src/components/Tickets/Tickets.css
@@ -19,6 +19,7 @@
     opacity: 1;
     height: auto;
     width: 400px;
+    z-index: 0;
   }
 }
 
